--- a/Preprocessing Twitter Data.ipynb
+++ b/Preprocessing Twitter Data.ipynb
@@ -351,9 +351,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:crypto_time_series]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-crypto_time_series-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
